--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -23,11 +23,11 @@
   align-items: center;
 }
 
-.navbar-logo {
+/* .navbar-logo { */
   /* font-size: 1.5rem;
   font-weight: bold;
   color: #1d4ed8; */
-}
+/* } */
 
 .logo-image {
   margin-left: 1.5rem;
